add video shared by pelagios kakunja

--- a/src/components/sharktrack/VideoHero.astro
+++ b/src/components/sharktrack/VideoHero.astro
@@ -53,6 +53,7 @@ const {
         </div>
       </div>
     )}
+    <p class="video-hero__credit">Video kindly shared by Pelagios Kakunja</p>
   </div>
   <div class="video-hero__content">
     <h1 class="video-hero__title">{title}</h1>
